--- a/commons/utility/pickle_util.ipynb
+++ b/commons/utility/pickle_util.ipynb
@@ -83,7 +83,7 @@
     "    compressed_pickle(dir_name+file_name, obj);\n",
     "  else:\n",
     "    pickle.dump(obj, open( dir_name+file_name, \"wb\" ))\n",
-    "  print(\"Result Saved in \"+dir_name)"
+    "  print(\"Result Saved in \"+ dir_name + file_name)"
    ]
   },
   {
@@ -102,6 +102,13 @@
     "    obj = pickle.load( open( path, \"rb\" ) );\n",
     "  return obj;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
